--- a/SpatialSurvivalOPSCR/Spatial_survival_density.rmd
+++ b/SpatialSurvivalOPSCR/Spatial_survival_density.rmd
@@ -1,11 +1,11 @@
 ---
-title: "Using nimbleSCR to simulate from and fit Bayesian OPSCR models with spatial density dependent survival"
+title: "Estimating density-dependent survival with OPSCR models and nimbleSCR"
 author: "Cyril Milleret"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 bibliography: references.bib
 vignette: >
-  %\VignetteIndexEntry{Using nimbleSCR to simulate from and fit Bayesian OPSCR models with spatial density dependent survival}
+  %\VignetteIndexEntry{Estimating density-dependent survival with OPSCR models and nimbleSCR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(fig.width = 7, fig.height = 7) 
 ```
 
-In this vignette, we demonstrate how to use the nimbleSCR [@nimbleSCR] and NIMBLE packages [@de2017programming;@nimbleSoftware2020] to simulate open-population spatial capture-recapture (OPSCR) data and fit flexible and efficient Bayesian OPSCR models with spatially explicit mortality. We assume that we have access to detections of individuals alive. The demographic model is parameterized using a hazard rate formulation and mortality is assumed to vary as a function of heterogeneous density. See details in Milleret et al...
+In this vignette, we demonstrate how to use the nimbleSCR [@nimbleSCR] and NIMBLE packages [@de2017programming;@nimbleSoftware2020] to simulate open-population spatial capture-recapture (OPSCR) data and fit flexible and efficient Bayesian OPSCR models with spatially explicit mortality assumed to be a function of density. We assume that we have access to detections of individuals alive. The demographic model is parameterized using a hazard rate formulation. See details in Milleret et al 2022 Estimating spatially variable and density-dependent survival using open-population spatial capture-recapture models; Ecology
 
 ```{r, warning = FALSE, message = FALSE}
 ## Load packages
@@ -26,8 +26,8 @@ library(raster)
 library(coda)
 
 ## Functions will be uploaded into nimbleSCR
-source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/sampler_categorical_general1.R")
-source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/dcatState1Dead.R")
+source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/sampler_categorical_general.R")
+source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/dcatState1Alive1Dead.R")
 source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/calculateDensity.R")
 
 ```
@@ -35,7 +35,7 @@ source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPS
 ## 1. Simulate SCR data
 ### 1.1 Habitat and trapping grid
 
-As an example, we create a $36 \times 36$ habitat grid with a resolution of 1 for each dimension. On the habitat, we center a $28 \times 28$ trapping grid with also a resolution of 1 for each dimension.   
+As an example, we create a $36 \times 36$ habitat grid with a resolution of 4 for each dimension. On the habitat, we center a $28 \times 28$ trapping grid with a resolution of 1 for each dimension.   
 
 ```{r , warning = FALSE, message = FALSE}
 r <- raster(nrows=9, ncols=9, xmn=0, xmx=36, ymn=0, ymx=36)
@@ -70,7 +70,7 @@ habitatMask <- as.matrix(r)#matrix(1, nrow = 4, ncol= 4, byrow = TRUE)
 
 ### 1.2 Rescale coordinates
 
-To implement the local evaluation approach when fitting the SCR model (see @Milleret2019 and @Turek2021 for further details), we need to rescale the habitat and trapping grid coordinates so that each habitat cell is of dimension $1 \times 1$. We also need to identify the lower and upper coordinates of each habitat cell using the 'getLowAndUpCoords' function.
+To implement the local evaluation approach when fitting the SCR model (see @Milleret2019 and @Turek2021 for further details), we need to rescale the habitat and trapping grid coordinates so that each habitat cell is of dimension $1 \times 1$. We also need to identify the lower and upper coordinates of each habitat cell using the 'getWindowCoords' function.
 
 ```{r , warning = FALSE, message = FALSE}
 ## Rescale coordinates
@@ -93,14 +93,14 @@ trapLocal <- getLocalObjects(habitatMask = habitatMask,
                              coords = scaledObjects$coordsDataScaled,
                              dmax = 1.8,
                              resizeFactor = 1,
-                             plot.check = TRUE
+                             plot.check = F
 )
 ```
 
 
 
 ### 1.3 Define model code
-Note that we do not provide 'detNums' and 'detIndices' arguments in the 'dbinomLocal_normal' function as we wish to use this model to simulate data (see '?dbinomLocal_normal' for further details). 
+ 
 
 ```{r , warning = FALSE, message = FALSE}
 modelCode <- nimbleCode({
@@ -155,23 +155,22 @@ modelCode <- nimbleCode({
   }#t
   
   
-
+  ## SPATIAL (DENSITY DEPENDENT) SURVIVAL
   betaPhi ~ dunif(-10,10)
   phi0 ~ dunif(-10,10)
   
+    ## DERIVE SURVIVAL PROBABILITY
   for(t in 1:n.years1){
-   # for(r in 1:n.cells){
-      phi[1:n.cells,t] <-  1-(exp(- exp(phi0 +  log(dens[1:n.cells, t]+1) * betaPhi)))
-    #}
+      phi[1:n.cells,t] <-  1-(exp(-exp(phi0 +  log(dens[1:n.cells, t]+1) * betaPhi)))
   }
   
   
   for(i in 1:M){ 
     z[i,1] ~ dcat(omeg1[1:2]) 
     for(t in 1:n.years1){
-      z[i,t+1] ~ dcatState1Dead( z = z[i,t]
-                                 , gamma = gamma[t]
-                                 , phiSpatial = phi[1:numHabWindows,t]
+      z[i,t+1] ~ dcatState1Alive1Dead( z = z[i,t]
+                                 , prob1To2 = gamma[t]
+                                 , prob2To3Hab = 1-phi[1:numHabWindows,t]
                                  , s = s[i,1:2,t]
                                  , habitatGrid = habitatGrid[1:y.max,1:x.max]
       )
@@ -221,11 +220,11 @@ modelCode <- nimbleCode({
     N[t] <- sum(isAlive[1:M,t])
   }#t
   
-  # Density 
+  # CALCULATE DENSITY 
   for (t in 1:n.years) {
     dens[1:n.cells, t] <- calculateDensity(  s = s[1:M,1:2, t]
                                            , habitatGrid = habitatGrid[1:y.maxDet, 1:x.maxDet]
-                                           , isAlive = isAlive[1:M,t]  
+                                           , indicator = isAlive[1:M,t]  
                                            , numWindows = n.cells
                                            , nIndividuals = M)#6
   }
@@ -238,8 +237,8 @@ modelCode <- nimbleCode({
 
 ```{r , warning = FALSE, message = FALSE}
 # PARAMETERS
-p0 <- 0.15 # We intentionally chose a large p0  to increase the size of the dataset and the convergence
-sigma <- 2/res(r)[1] # Since we scaled the coordinates to the habitat, we also need to rescale the sigmaScaled 
+p0 <- 0.15 # We intentionally chose a large p0  to increase the size of the dataset and obtain better convergence
+sigma <- 2/res(r)[1] # Since we scaled the coordinates to the habitat, we also need to rescale the sigma
 
 M <- 650
 n.individualsT1 <- 250
@@ -251,7 +250,7 @@ betaPhi <- -1
 tau <- 1.5
 
 recruitment <- 0.3  
-## calculate the gamma 
+## CALCULATE GAMMA 
 gamma <- n.individualsT1/M
 Recruit <- n.individualsT1*recruitment ## 40 % of recruitment 
 NeverAlive <- n.individualsT1
@@ -262,16 +261,11 @@ for(t in 2:n.years){
     NeverAlive[t] <- NeverAlive[t-1] + Recruit
 }
   
-####
-lengthYCombined <- 1 + trapLocal$numLocalIndicesMax*2
-##
-habCov <- as.numeric(scale(lowerAndUpperCoords$lowerHabCoords[,2])[,1])
-habCovImage <- lowerAndUpperCoords$habitatGrid
-habCovImage[] <- habCov[lowerAndUpperCoords$habitatGrid]
-#check the habitat covariate. 
-image(habCovImage)
 
-### check survival probability relationship with density
+lengthYCombined <- 1 + trapLocal$numLocalIndicesMax*2
+
+
+## EXPECTED SURVIVAL PROBABILITY AS A FUNCTION OF DENSITY
 dens <- log(c(1:10))
 phi <- 1-(exp(- exp(phi0 +  dens * betaPhi)))
 plot(phi ~ dens, ylim=c(0,1), type="b")
@@ -283,7 +277,6 @@ plot(phi ~ dens, ylim=c(0,1), type="b")
 ### 1.5 Create data, constants and inits objects 
 
 ```{r , warning = FALSE, message = FALSE}
-
 nimConstants <- list(M = M,
                      n.years = n.years,
                      n.years1 = n.years-1,
@@ -301,8 +294,6 @@ nimConstants <- list(M = M,
                      lengthYCombined = lengthYCombined,
                      numHabWindows = dim(lowerAndUpperCoords$lowerHabCoords)[1])
 
-
-
 nimData <- list(trapCoords = scaledObjects$coordsDataScaled,
                 trials = rep(1, dim(scaledObjects$coordsDataScaled)[1]),
                 lowerHabCoords = lowerAndUpperCoords$lowerHabCoords,
@@ -313,8 +304,8 @@ nimData <- list(trapCoords = scaledObjects$coordsDataScaled,
 
 # We set the parameter values as inits
 nimInits <- list(sigma = sigma,
-                 p0=p0,
-                 tau=tau,
+                 p0 = p0,
+                 tau = tau,
                  gamma = gamma[2:n.years],
                  gamma1 = gamma[1],
                  betaPhi = betaPhi,
@@ -337,12 +328,11 @@ model <- nimbleModel( code = modelCode,
 
 ### 1.7 Simualte SCR data from the NIMBLE model
 
-We first need to obtain the list of nodes that will be simulated. We used the 'getDependencies' function from NIMBLE. Using the 'simulate' function from NIMBLE, we will then simulate the activity center (AC) locations ('s'), the state of the individual ('z') and SCR observation data ('y') given the values we provided for 'p0', 'sigma' and 'psi'.
+We first need to obtain the list of nodes that will be simulated. We used the 'getDependencies' function from NIMBLE. Using the 'simulate' function from NIMBLE, we will then simulate the activity center (AC) locations ('s'), the state of the individual ('z') and SCR observation data ('y') 
 
 
 ```{r , warning = FALSE, message = FALSE}
 # FIRST WE GET THE NODES TO SIMULATE
-#nodesToSim <- model$getDependencies(c("s", "z"), self=T)
 nodesToSim <- model$getDependencies(c("p0","sigma","phi0", "betaPhi","mu",
                                       "gamma","tau","gamma1"),
                                       self = F,
@@ -364,17 +354,14 @@ N.recoveredDead
 
 # check average density 
 mean(log(model$dens+1))
-
-
 ```
 
 
 ## 2. RUN MCMC WITH NIMBLE
 
-Here, we build the NIMBLE model again using the simulated 'y' as data. For simplicity, we used the simulated 'z' as initial values. Then we can fit the SCR model with the simulated 'y' data set.  
+Here, we build the NIMBLE model again using the simulated 'y' as data. For simplicity, we used the simulated 'z' as initial values. Then we can fit the OPSCR model with the simulated 'y' data set.  
 
 ```{r , warning = FALSE, message = FALSE}
-
 myZ <- model$z
 z <- zInits <- model$z
 whichDet <- apply(model$y, 3, function(x) x[,1]>0 )
@@ -388,8 +375,6 @@ nimData$y <- model$y
 nimData$z <- z
 nimInits$z <- zInits
 nimInits$s <- model$s
-
-
 
 # CREATE AND COMPILE THE NIMBLE MODEL
 model <- nimbleModel( code = modelCode,
@@ -420,10 +405,11 @@ zNodes <- zNodes[-grep( ", 1]",zNodes)]
 MCMCconf
 #remove samplers
 MCMCconf$removeSamplers(zNodes)
-for(i in 1:length(zNodes)){
-  MCMCconf$addSampler(target = zNodes[i], type = 'sampler_categorical_general1',
-                                  control=list("numCategories"= 3))
-}
+MCMCconf$addSampler(target = zNodes,
+                      type = 'sampler_categorical_general.R',
+                      scalarComponents = TRUE,
+                      control = list("numCategories"= 3))
+
 
 MCMC <- buildMCMC(MCMCconf)
 cMCMC <- compileNimble(MCMC, project = model, resetFunctions = TRUE)
@@ -543,12 +529,13 @@ modelCode1 <- nimbleCode({
   }
   
   
+  
   for(i in 1:M){ 
     z[i,1] ~ dcat(omeg1[1:2]) 
     for(t in 1:n.years1){
-      z[i,t+1] ~ dcatState1Dead( z = z[i,t]
-                                 , gamma = gamma[t]
-                                 , phiSpatial = phi[1:numHabWindows,t]
+      z[i,t+1] ~ dcatState1Alive1Dead( z = z[i,t]
+                                 , prob1To2 = gamma[t]
+                                 , prob2To3Hab = 1-phi[1:numHabWindows,t]
                                  , s = s[i,1:2,t]
                                  , habitatGrid = habitatGrid[1:y.max,1:x.max]
       )
@@ -611,7 +598,7 @@ modelCode1 <- nimbleCode({
 
 ```
 
-```{r , eval=F, warning = FALSE, message = FALSE}
+```{r , eval=T, warning = FALSE, message = FALSE}
 nimInits$phi0 <- -3 ## we modify the initial value.
 
 model1 <- nimbleModel( code = modelCode1,
@@ -638,10 +625,10 @@ zNodes <- zNodes[-grep( ", 1]",zNodes)]
 MCMCconf1
 #remove samplers
 MCMCconf1$removeSamplers(zNodes)
-for(i in 1:length(zNodes)){
-  MCMCconf1$addSampler(target = zNodes[i], type = 'sampler_categorical_general1',
-                                  control=list("numCategories"= 3))
-}
+MCMCconf1$addSampler(target = zNodes,
+                      type = 'sampler_categorical_general.R',
+                      scalarComponents = TRUE,
+                      control = list("numCategories"= 3))
 
 MCMC1 <- buildMCMC(MCMCconf1)
 cMCMC1 <- compileNimble(MCMC1, project = model1, resetFunctions = TRUE)
