--- a/SpatialSurvivalOPSCR/Spatial_survival2Alive2Dead.rmd
+++ b/SpatialSurvivalOPSCR/Spatial_survival2Alive2Dead.rmd
@@ -18,13 +18,18 @@ knitr::opts_chunk$set(fig.width = 7, fig.height = 7)
 In this vignette, we demonstrate how to use the nimbleSCR [@nimbleSCR] and NIMBLE packages [@de2017programming;@nimbleSoftware2020] to simulate open-population spatial capture-recapture (OPSCR) data and fit flexible and efficient Bayesian OPSCR models with spatially hetereogenous mortality. We assume that we have access to detections of individuals alive but also dead recovery locations [@Dupont2021]. The OPSCR model is parameterized using a hazard rate formulation and two competing cause of mortality. For one cause of mortality (e.g. culling), we assume that all mortality events are recovered with an associated death location. See details in Milleret et al....
 
 ```{r, warning = FALSE, message = FALSE}
+rm(list=ls())
 ## Load packages
 library(nimble)
 library(nimbleSCR)
 library(basicMCMCplots)
 
 source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/sampler_categorical_general1.R")
-source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/dcatState1Alive2Dead.R")
+rm(dcatState2Alive2Dead)
+rm(rcatState2Alive2Dead)
+
+source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/dcatState2Alive2Dead.R")
+#source("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/dcatState1Alive2Dead.R")
 
 
 ```
@@ -150,16 +155,21 @@ modelCode <- nimbleCode({
   ##----- DEMOGRAPHIC PROCESS -----## 
   ##-------------------------------##    
   ## INTERCEPT MORTALITY HR
-  mhH ~ dunif(-10, 10)
-  mhW ~ dunif(-10, 10)
+  ## for the 2 states alive
+  for(c in 1:2){
+    mhH[c] ~ dunif(-10, 10)
+    mhW[c] ~ dunif(-10, 10)
+    
+    ## CAUSE SPECIFIC SLOPE MORTALITY 
+    betaH[c] ~ dunif(-10,10)
+    betaW[c] ~ dunif(-10,10)
+  }
   
-  ## CAUSE SPECIFIC SLOPE MORTALITY 
-  betaH ~ dunif(-10,10)
-  betaW ~ dunif(-10,10)
-  
+  #transition probability from one live state to the other 
+  prob2To3 ~ dunif(0,1)
   ## FIRST YEAR INCLUSION PARAMETER 
-  gamma1 ~ dunif(0,1)
-  omeg1[1:2] <- c(1-gamma1, gamma1)
+  #gamma1 ~ dunif(0,1)
+  omeg1[1:3] ~ ddirch(alpha[1:3])  
   
   ## TIME SPECIFIC INCLUSION PARAMETER 
   for(t in 1:n.years1){
@@ -174,25 +184,35 @@ modelCode <- nimbleCode({
   #   }
   # }
   
-  ## SURVIVAL (CAUSE-SPECIFIC MORTALITY SPATIALLY EXPLICIT)
-  mhH1[1:numHabWindows] <- exp(mhH + betaH*habCov[1:numHabWindows])
-  mhW1[1:numHabWindows] <- exp(mhW + betaW*habCov[1:numHabWindows])
-  
-  # derive mortality and surival probabilities 
-  phi[1:numHabWindows] <- exp(-(mhH1[1:numHabWindows] + mhW1[1:numHabWindows]))
-  h[1:numHabWindows] <-  (1 - phi[1:numHabWindows])* (mhH1[1:numHabWindows]/(mhH1[1:numHabWindows] +
-                         mhW1[1:numHabWindows]))
-  w[1:numHabWindows] <-  (1 - phi[1:numHabWindows])* (mhW1[1:numHabWindows]/(mhH1[1:numHabWindows] +
-                         mhW1[1:numHabWindows]))
+    ## for the 2 states alive
+
+    for(c in 1:2){
+
+      ## SURVIVAL (CAUSE-SPECIFIC MORTALITY SPATIALLY EXPLICIT)
+      mhH1[1:numHabWindows,c] <- exp(mhH[c] + betaH[c]*habCov[1:numHabWindows])
+      mhW1[1:numHabWindows,c] <- exp(mhW[c] + betaW[c]*habCov[1:numHabWindows])
+      
+      # derive mortality and surival probabilities 
+      phi[1:numHabWindows,c] <- exp(-(mhH1[1:numHabWindows,c] + mhW1[1:numHabWindows,c]))
+      h[1:numHabWindows,c] <-  (1 - phi[1:numHabWindows,c])* (mhH1[1:numHabWindows,c]/(mhH1[1:numHabWindows,c] +
+                             mhW1[1:numHabWindows,c]))
+      w[1:numHabWindows,c] <-  (1 - phi[1:numHabWindows,c])* (mhW1[1:numHabWindows,c]/(mhH1[1:numHabWindows,c] +
+                             mhW1[1:numHabWindows,c]))
+      
+      
+    }
   
   ## STATE TRANSITION 
   for(i in 1:M){ 
-    z[i,1] ~ dcat(omeg1[1:2]) 
+    z[i,1] ~ dcat(omeg1[1:3]) 
     for(t in 1:n.years1){
-      z[i,t+1] ~ dcatState1Alive2Dead(   z = z[i,t]
+      z[i,t+1] ~ dcatState2Alive2Dead(   z = z[i,t]
                                  , prob1To2 = gamma[t]
-                                 , prob2To3Hab = h[1:numHabWindows]
-                                 , prob2To4Hab = w[1:numHabWindows]
+                                 , prob2To3 = prob2To3
+                                 , prob2To4Hab = h[1:numHabWindows,1]
+                                 , prob2To5Hab = w[1:numHabWindows,1]
+                                 , prob3To4Hab = h[1:numHabWindows,2]
+                                 , prob3To5Hab = w[1:numHabWindows,2]
                                  , s = s[i,1:2,t]
                                  , habitatGrid = habitatGrid[1:y.max,1:x.max])
     }#i 								
@@ -234,7 +254,7 @@ modelCode <- nimbleCode({
         , localObsWindowIndices = localObsWindowIndices[1:numHabWindows,1:maxNBDetsReco]
         , numLocalObsWindows = numLocalObsWindows[1:numHabWindows]
         , numWindows = numHabWindows
-        , indicator = z[i,t]==3
+        , indicator = z[i,t]== 4
       )
     }#i
   }#t
@@ -244,9 +264,9 @@ modelCode <- nimbleCode({
   ##---------- DERIVED PARAMETERS ----------##
   ##----------------------------------------##
   for(i in 1:M){ 
-    isAlive[i,1] <- (z[i,1] == 2) 
+    isAlive[i,1] <- (z[i,1] == 2)  + (z[i,1] == 3) 
     for(t in 1:n.years1){
-      isAlive[i,t+1] <- (z[i,t+1] == 2) 
+      isAlive[i,t+1] <- (z[i,t+1] == 2) + (z[i,t+1] == 3) 
     }
   }
   for(t in 1:n.years){
@@ -261,20 +281,20 @@ modelCode <- nimbleCode({
 The model formulation uses data augmentation to derive N estimates [@Royle2012]. We therefore need to choose the total number of individuals *M* (detected + augmented).
 
 ```{r , warning = FALSE, message = FALSE}
-M <- 500
+M <- 650
 
 ## ASSIGN SIMULATED VALUES 
 p0 <- 0.2
 sigma <- 0.4
 
 #expected number of individuals alive (z=2)at t=1
-n.individualsT1 <- 200
+n.individualsT1 <- 70
 n.years <- 5
-mhW <- -2
-mhH <- -2
-
-betaH <- 1
-betaW <- -1
+mhW <- c(-2,-1)
+mhH <- c(-2,-1)
+prob2To3 <- c(0.5)
+betaH <- c(1,0.5)
+betaW <- c(-1,-0.5)
 tau <- 1.2
 
 recruitment <- 0.3  
@@ -301,18 +321,22 @@ habCovImage[] <- habCov[lowerAndUpperCoords$habitatGrid]
 image(habCovImage)
 
 ### plot expected surv/mortality prob as a function of covariate 
-mhH1 <- exp(mhH + betaH*habCov)
-mhW1 <- exp(mhW + betaW*habCov)
+mhH1 <- mhW1 <- phi <- h <- w <- array(NA,c(length(habCov) ,2)) 
+for(c in 1:2){
+mhH1[,c] <- exp(mhH[c] + betaH[c]*habCov)
+mhW1[,c] <- exp(mhW[c] + betaW[c]*habCov)
   
-phi <- exp(-(mhH1 + mhW1))
-h <-  (1-phi) * (mhH1/(mhH1 + mhW1))
-w <-  (1-phi) * (mhW1/(mhH1 + mhW1))
+phi[,c] <- exp(-(mhH1[,c] + mhW1[,c]))
+h[,c] <-  (1-phi[,c]) * (mhH1[,c]/(mhH1[,c] + mhW1[,c]))
+w[,c] <-  (1-phi[,c]) * (mhW1[,c]/(mhH1[,c] + mhW1[,c]))
   
-plot(phi ~ habCov, ylim=c(0,1), type="b", ylab="Probability")
-points(h ~ habCov, col="red", type="b")
-points(w ~ habCov, col="blue", type="b")
+plot(phi[,c] ~ habCov, ylim=c(0,1), type="b", ylab="Probability")
+points(h[,c] ~ habCov, col="red", type="b")
+points(w[,c] ~ habCov, col="blue", type="b")
 legend("topright", legend=c("phi","h","w"), 
        col=c("black","red","blue"), lty=c(1,1,1))
+}
+
 ```
 
 
@@ -348,7 +372,8 @@ nimConstants <- list(M = M,
                      habitatIDDet = trapLocal$habitatGrid,
                      lengthYCombined = lengthYCombined,
                      numHabWindows = dim(lowerAndUpperCoords$lowerHabCoords)[1],
-                     maxNBDetsReco = deadObsLocal$numLocalIndicesMax)
+                     maxNBDetsReco = deadObsLocal$numLocalIndicesMax,
+                     alpha = rep(1,3))
 
 
 
@@ -371,9 +396,10 @@ nimInits <- list(sigma = sigma,
                  p0=p0,
                  tau=tau,
                  gamma = gamma[2:n.years],
-                 gamma1 = gamma[1],
+                 omeg1 = c(1-gamma[1],gamma[1]/2,gamma[1]/2),
                  mhW = mhW,
                  mhH = mhH,
+                 prob2To3 = prob2To3,
                  betaH = betaH,
                  betaW = betaW) 
 ```
@@ -400,8 +426,8 @@ We first need to obtain the list of nodes that will be simulated. We used the 'g
 ```{r , warning = FALSE, message = FALSE}
 # FIRST WE GET THE NODES TO SIMULATE
 #nodesToSim <- model$getDependencies(c("s", "z"), self=T)
-nodesToSim <- model$getDependencies(c("p0","sigma","mhW", "mhH","mu",
-                                      "gamma","tau","gamma1","betaH",
+nodesToSim <- model$getDependencies(c("p0","sigma","mhW", "mhH","mu","prob2To3",
+                                      "gamma","tau","alpha","betaH",
                                        "betaW"),
                                       self = F,
                                       downstream = T,
@@ -447,10 +473,10 @@ model$simulate(nodesToSim, includeData = FALSE)
 After running 'simulate', the simulated data are stored in the 'model' object. For example, we can access the simulated 'z' and check how many individuals were considered alive and recovered at each time step :
 
 ```{r , warning = FALSE, message = FALSE}
-N <- apply(model$z,2,function(x)sum(x==2))
+N <- apply(model$z,2,function(x)sum(x %in% c(2,3) ))
 N
 
-N.recoveredDead <- apply(model$z,2,function(x)sum(x==3))
+N.recoveredDead <- apply(model$z,2,function(x)sum(x==4))
 N.recoveredDead
 ```
 
@@ -483,15 +509,16 @@ model <- nimbleModel( code = modelCode,
                       check = F,
                       calculate = F)
 model$calculate()
-
+which(is.infinite(model$logProb_z),arr.ind = T)
+z[61,]
 ```
 
-```{r , eval=F, warning = FALSE, message = FALSE}
+```{r , eval=T, warning = FALSE, message = FALSE}
 cmodel <- compileNimble(model)
 cmodel$calculate()
 MCMCconf <- configureMCMC(model = model,
-                          monitors = c("p0","sigma","mhW","mhH", "N",
-                                         "gamma","tau","betaH","betaW"),
+                          monitors = c("p0","sigma","mhW","mhH", "N","prob2To3",
+                                         "alpha","tau","betaH","betaW"),
                           control = list(reflective = TRUE),
                           thin = 1)
 ## WE NEED TO SET THE NODES FOR WHICH dcatState2Dead IS USED AS A CATEGORICAL SAMPLER
@@ -506,7 +533,7 @@ MCMCconf
 MCMCconf$removeSamplers(zNodes)
 for(i in 1:length(zNodes)){
   MCMCconf$addSampler(target = zNodes[i], type = 'sampler_categorical_general1',
-                                  control=list("numCategories"= 4))
+                                  control=list("numCategories"= 5))
 }
 
 MCMC <- buildMCMC(MCMCconf)
@@ -518,17 +545,17 @@ MCMCRuntime <- system.time(myNimbleOutput <- runMCMC( mcmc = cMCMC,
                                                              nchains = 3,
                                                              samplesAsCodaMCMC = TRUE))
 setwd("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/")
-save(myNimbleOutput, MCMCRuntime, file="samples.RData")
+save(myNimbleOutput, MCMCRuntime, file="samples2Alive2Dead.RData")
 ```
 
 ```{r , eval=T, warning = FALSE, message = FALSE}
 setwd("C:/Personal_Cloud/OneDrive/Work/PublicCodesGit/Public/SpatialSurvivalOPSCR/")
-load("samples.RData")
+load("samples2Alive2Dead.RData")
 
 #plot check 
 chainsPlot(myNimbleOutput, var=c("N[1]","N[2]","N[3]","N[4]","N[5]"), line = N)
-chainsPlot(myNimbleOutput, var=c("p0","sigma","mhW","mhH","tau","betaH","betaW"), 
-           line= c(p0, sigma, mhW, mhH,tau, betaH, betaW))
+chainsPlot(myNimbleOutput, var=c("p0","sigma","mhW","mhH","tau","betaH","betaW","prob2To3"), 
+           line= c(p0, sigma, mhW, mhH,tau, betaH, betaW,prob2To3))
 ```
 
 ## REFERENCES
